--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,19 +12,20 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  image_picker: ^1.1.2
+  geolocator: ^14.0.2
+  animations: ^2.0.11
+  font_awesome_flutter: ^10.9.0
+  go_router: ^16.1.0
+  flutter_highlight: ^0.7.0
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
-  image_picker: ^1.1.2
-  geolocator: ^14.0.2
-  animations: ^2.0.11
-  font_awesome_flutter: ^10.9.0
-  google_fonts: ^6.3.0
-  go_router: ^16.1.0
-  flutter_highlight: ^0.7.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -38,6 +39,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/code/
+
+  fonts:
+    - family: Delius
+      fonts:
+        - asset: assets/fonts/Delius-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
