--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   go_router: ^16.1.0
   flutter_highlight: ^0.7.0
   toastification: ^3.0.3
+  blurrycontainer: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +40,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/code/
+    - assets/images/
 
   fonts:
     - family: Delius
